--- a/index.html
+++ b/index.html
@@ -245,7 +245,9 @@
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <h2>Currently<br>In Development</h2>
+                                <div>
+                                    <h2>Currently<br>In Development</h2>
+                                </div>
                             </div>
                         </div>
                         <img src="img/portfolio/wardrobot.png" class="img-responsive" alt="">
@@ -280,7 +282,7 @@
                                     <h4 class="subheading">THE COLLEGE YEARS</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Graduated with a Psychology degree, but enjoyed classes in architecture, theatre, philosophy, screenwriting, and documentary production. Coached tennis, basketball, and chess to underserved communities on the side. Interned at a branding agency <a href="http://www.heartbeatideas.com/" target="_blank">Heartbeat Ideas</a> one summer and taught 7th Grade Sceince at <a href="https://www.breakthroughcollaborative.org/" target="_blank">Breakthrough Collaborative</a> another summer. Also met my best friends in the world! </p>
+                                    <p class="text-muted">Graduated in Psychology but enjoyed classes in architecture, theatre, philosophy, screenwriting, etc. Coached tennis, basketball, and chess to underserved communities. Interned at a branding agency <a href="http://www.heartbeatideas.com/" target="_blank">Heartbeat Ideas</a> one summer and taught 7th Grade Sceince at <a href="https://www.breakthroughcollaborative.org/" target="_blank">Breakthrough Collaborative</a> another summer. </p>
                                 </div>
                             </div>
                         </li>
@@ -294,7 +296,7 @@
                                     <h4 class="subheading">WORKING IN AUTISM</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">I led classes, clubs, and workshops at the globally-recognized <a href="http://www.autismcenter.org/" target="_blank">Southwest Autism Resource and Research Center</a>. Organized field trips all over the city, spearheaded volunteer activities with local nonprofits, assisted in research efforts, and helped adults acquire jobs and learn those jobs on-site - this is just a nibble of the awesomeness I was able to do at SARRC. </p>
+                                    <p class="text-muted">I led classes, clubs, and workshops at the globally-recognized <a href="http://www.autismcenter.org/" target="_blank">Southwest Autism Resource and Research Center</a>.Spearheaded volunteer activities with local nonprofits, assisted in research efforts, and helped adults acquire jobs and learn those jobs on-site - this is just a nibble of the great things I was able to do at SARRC. </p>
                                 </div>
                             </div>
                         </li>
@@ -308,10 +310,20 @@
                                     <h4 class="subheading">GROWING A BUSINESS</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">With the assistance of LOTS of coffee and sugar, I helped turn an idea into a money-making enterprise. With my experience at <a href="http://fracturedprune.com/" target="_blank">Fractured Prune Doughnuts</a>, I held just about every title imaginable - supply chain coordinator, social media manager, HR director, business designer. I learned what it takes (A LOT!) to get a business off the ground and wouldn’t take that experience back for anything. 
+                                    <p class="text-muted">With my experience at <a href="http://fracturedprune.com/" target="_blank">Fractured Prune Doughnuts</a>, I held just about every title imaginable - supply chain manager, social media lead, HR director, digital product manager, business designer. I learned what it takes (A LOT!) to get a business off the ground and wouldn’t take that experience back for anything. 
                                     </p>
                                 </div>
                             </div>
+<!--                             <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>2014-2015</h4>
+                                    <h4 class="subheading">Fake Crow</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">With my experience at <a href="http://fracturedprune.com/" target="_blank">Fractured Prune Doughnuts</a>, I held just about every title imaginable - supply chain manager, social media lead, HR director, digital product manager, business designer. I learned what it takes (A LOT!) to get a business off the ground and wouldn’t take that experience back for anything. 
+                                    </p>
+                                </div>
+                            </div> -->
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
