--- a/index.html
+++ b/index.html
@@ -206,21 +206,21 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Fractured Prune Doughnuts</h4>
-                        <p class="text-muted">Service Design, Business Design, Digital Marketing</p>
+                        <p class="text-muted">Service/Business Design, Business Management</p>
                 </div>
                 </div>        
                 <div class="col-sm-6 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/mac.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/xtensio.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Pursuits</h4>
-                        <p class="text-muted">UI, Website Design, Branding</p>
+                        <h4>Xtensio</h4>
+                        <p class="text-muted">UX/UI Design</p>
                     </div>
                 </div>
             </div>
@@ -238,27 +238,28 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Pulseband</h4>
-                        <p class="text-muted">Mobile App Design, Product Development</p> 
-                    </div>
+                        <p class="text-muted">UX Research, UX Design</p> 
+                    </div> 
                 </div>
                 <div class="col-sm-6 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
-                                <div>
-                                    <h2>Currently<br>In Development</h2>
+                                <div class="portfolio-hover-content">
+                                <i class="fa fa-plus fa-3x"></i>
                                 </div>
                             </div>
                         </div>
-                        <img src="img/portfolio/wardrobot.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/mac.jpg" alt=""class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Wardrobot</h4>
-                        <p class="text-muted">Mobile App Design</p>
+                        <h4>Pursuits</h4>
+                        <p class="text-muted">UI Web Design, Branding</p>
                     </div> 
                 </div>
             </div> 
         </div>
+    </div>
     </section>
   <!-- About Section -->
     <section id="about">
@@ -865,7 +866,24 @@ With this solution, the customer makes a lap through the store, completing a ser
                                 <p>
 With this solution, the shift manager assigns each employee to a specific job title. Each job title correlates to an area of the store and an accompanying checklist of tasks to be completed within that area. Each employee is solely responsible for his/her checklists and area. Area coverage & checklist depth is calibrated according to traffic --- i.e. the slower the traffic, the job titles to own, areas to cover, and checklists to complete.
                                 </p>        
-                            </div> 
+                            </div>
+
+<!--                             <h2>Digital Product</h2>
+                            <p class="item-intro text-muted">Implementing the power of computer science into a retail operation</p>
+                                                            
+<!--                             <img class="img-responsive img-centered" src="img/fp/yelp.png" alt=""> -->
+                            <!-- <div class="gcs"> 
+                                <ul>
+<li><h3>GOAL</h3><p>  </p></li>
+
+<li><h3>CHALLENGE</h3><p>    </p></li>
+
+<li><h3>SOLUTION</h3><p>  Implementaiton.</p></li> 
+                                </ul>                
+                                <p>
+Pictured on this page are some of Fractured Prune’s online reviews. What is typically considered a space for negative commentary on the service has been a place for positive reviews with Fractured Prune Doughnuts.            
+                                </p>        
+                            </div>  --> -->
 
                             <h2>Expansion Plans</h2>
                             <p class="item-intro text-muted">Scaling the business in the most efficient, duplicable way</p>                            
@@ -909,7 +927,7 @@ With this solution, the shift manager assigns each employee to a specific job ti
                                 <ul>
 <li><h3>GOAL</h3><p>To provide a service experience above the level of the product experience.</p></li>
 
-<li><h3>CHALLENGE</h3><p> The exposed nature of a  food business makes it particularly vulnerable to be criticized (mostly on online forums.) </p></li>
+<li><h3>CHALLENGE</h3><p> The exposed nature of a food business makes it particularly vulnerable to be criticized (mostly on online forums.) </p></li>
 
 <li><h3>SOLUTION</h3><p>All employee-facing systems, meetings, and paperwork preach customer service as the primary concern.</p></li> 
                                 </ul>                
@@ -1161,6 +1179,94 @@ I created this video using Keynote's animation effects.
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>     
+    </div>
+    <!-- Portfolio Modal 6  -->
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h1>Xtensio</h1>
+                            <br><br>
+                            <img class="img-responsive img-centered" src="img/ug/ug.jpg" alt="">
+<p><a href="http://www.xtensio.com/" target="_blank">Xtensio</a> is a web application born out of the product design studio <a href="http://www.fakecrow.com/" target="_blank">Fake Crow</a> in Los Angeles. What was once described as a startup-specific tool -- <i>“Show your investors you have value”</i> -- pivoted to a more broad descriptor — <i>“A toolbox for designers, marketing professionals, and entrepreneurs.”</i> Xtensio started out as just the User Persona module and now currently holds 9 other templates: Startup One-Pager, Lean Canvas, Fundraising Summary, SWOT Analysis, etc. to name a few. These tools have a specific use case — for the person looking to create presentation-ready deliverables without having to do lots of research, sift through templates, or learn illustration software.
+<br><br>    
+
+As part of my application to the Fake Crow agency, I took on the task of designing a new template for Xtensio. While I had some idea as to what could be a good addition to the Xtensio fleet, I first conducted preliminary research before jumping to any conclusions.</p>
+                            <h2>Interviews</h2>
+                            <div>
+                            <p>For this stage, I spoke to 3 startup CEOs - Jeremy Keeshin // CodeHS, Aaron Fazulak // DESIGNATION , Abhirukt Sapru // Snyffle. I wanted to hone in on a few answers:</p>
+                            <ul>
+                                <li>What are the use cases that call for producing presentation-ready deliverables?</li>
+                                <li>What aspects of your business do you feel the need to visualize but are unable to?</li>
+                            </ul>
+                            <p>
+                            What I found is that all 3 CEOs are constantly pitching their business/product and find a never-ending demand to supplement their pitches/email communication with visually appealing documents. After speaking with each of them and debating between a few tools, I decided to design an Experience Mapping Template/Module.    
+                            </p>
+                            </div>                  
+                            <h2>Experience Maps</h2>
+                            <img class="img-responsive img-centered" src="img/xtensio/experiencemaps.png" alt="">
+                            <br>
+                            <h3>Research &amp; Synthesis</h3>
+                            <p>I sought out inspiration from experience maps and user journeys online. As you can see in the image above, there is much variation for this type of document. I began to hone in on what variables are showcased in these documents. From visualizing customers' emotional states to illustrating the business/service blueprint, it was clear that building a tool that allows users to produce these documents would need to be focused. </p>
+                            <h3>Experiece Map Generating Software</h3>
+                            <div class="row">          
+                                <div class="col-xs-4"> 
+                                <h4>Touchpoint</h4>
+                                    <img class="img-responsive img-centered" src="img/xtensio/generating/2.png" alt="">        
+                                </div>
+                                <div class="col-xs-4">
+                                    <h4>UXPressia</h4>
+                                    <img class="img-responsive img-centered" src="img/xtensio/generating/1.png" alt="">        
+                                </div>
+                                <div class="col-xs-4">
+                                    <h4>Canvanizer</h4>
+                                    <img class="img-responsive img-centered" src="img/xtensio/generating/3.png" alt="">        
+                                </div>
+                            </div>
+                            <p>Once I got an idea for the elements involved in an experience map, I looked to existing tools being used to generate these documents. What I found was that there was a sensitive balance occuring in the creation of these documents. The two forces at work were how much functionality you can put in the editor versus what diversity of templates you want to offer.</p>
+                            <br>
+                            <h2>Design</h2>
+                            <h3>Sketches</h3>
+                            <img class="img-responsive img-centered" src="img/xtensio/sketch.jpg" alt="">
+                            <p class="caption">As I began to sketch, I tried to work within the design constraints of the current Xtensio platform. I wanted a v1 to require as little new code as possible. </p>
+                            <h3>Screens</h3>
+                            <div class="row">          
+                                <div class="col-xs-4"> 
+                                <h4>Icon Select</h4>
+                                    <img class="img-responsive img-centered" src="img/xtensio/screens/1.jpg" alt="">        
+                                </div>
+                                <div class="col-xs-4">
+                                    <h4>Grid System</h4>
+                                    <img class="img-responsive img-centered" src="img/xtensio/screens/2.jpg" alt="">        
+                                </div>
+                                <div class="col-xs-4">
+                                    <h4>All Functionality</h4>
+                                    <img class="img-responsive img-centered" src="img/xtensio/screens/3.jpg" alt="">        
+                                </div>
+                            </div>
+                            <p>As you can see above, the "Experience" and "Doing" categories are unique and require brand-new code.</p>
+                            <h3>Prototype</h3>
+                            <iframe src="https://marvelapp.com/b20cgj#9262452?emb=1" width="452" height="452" allowTransparency="true" frameborder="0"></iframe>
+
+                            <h3>Upon Hire</h3>
+                            <p>Once brought onto the team at Fake Crow, I was asked to work more on Xtensio. Day-to-day tasks took on a wide range. First project: to design a new template using the current system.</p>
+
+                            <br><br>  
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>   
