--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li>
+<!--                     <li>
                         <a class="page-scroll" href="#services">What I Do</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#portfolio">Portfolio</a>
                     </li>
@@ -87,18 +87,18 @@
                 
                 <div class="intro-heading animated fadeIn">Danny Luber</div>
                 <h3 class="animated fadeIn">Designer  |  Researcher  |  Product Manager  |  Writer </h3>
-                <a href="#services" class="page-scroll btn btn-xl animated bounceInUp">Learn More</a>
+                <a href="#portfolio" class="page-scroll btn btn-xl animated bounceInUp">Learn More</a>
             </div>
         </div>
     </header>
 
     <!-- Services Section -->
-    <section id="services">
-        <div class="container">
+    <!-- <section id="services"> -->
+        <!-- <!-- <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">What I Do</h2><br><br>
-<!--                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
+<!--                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> --><!-- 
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -106,7 +106,7 @@
                             <i class="fa fa-circle fa-stack-2x text-primary"></i>
                             <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="service-heading">UX &amp; IxD</h4>
+                        <h4 class="service-heading">UX, UI &amp; IxD</h4>
                         <p class="text-muted">Read, research, interview - synthesize with IA, personas, and scenarios. Begin product development with app maps, task flows, and low-fidelity wires. User test > collect insights > iterate. Repeat cycle over and over. And over and over.</p>
                     </div>
                     <div class="col-md-4">
@@ -153,9 +153,9 @@
                     </div>
                 </div>  
             </div>
-        </div>
-    </section> 
-
+        </div> -->  
+<!--     </section> 
+ -->
     <!-- Portfolio Grid Section -->
     <section id="portfolio" class="bg-light-gray">
         <div class="container">
@@ -740,7 +740,7 @@
                             <h3></h3>
                             <p></p>
 
-                            <iframe src="https://marvelapp.com/1h8j3b4?emb=1" width="452" height="452" allowTransparency="true" frameborder="0"></iframe>
+                            <iframe src="https://marvelapp.com/1h8j3b4?emb=1" width="452" height="900" allowTransparency="true" frameborder="0"></iframe>
 
                             <h3>Development</h3>
                             <p>We are now working on development. Stay tuned!</p>
@@ -1197,26 +1197,24 @@ I created this video using Keynote's animation effects.
                         <div class="modal-body">
                             <h1>Xtensio</h1>
                             <br><br>
-                            <img class="img-responsive img-centered" src="img/ug/ug.jpg" alt="">
-<p><a href="http://www.xtensio.com/" target="_blank">Xtensio</a> is a web application born out of the product design studio <a href="http://www.fakecrow.com/" target="_blank">Fake Crow</a> in Los Angeles. What was once described as a startup-specific tool -- <i>“Show your investors you have value”</i> -- pivoted to a more broad descriptor — <i>“A toolbox for designers, marketing professionals, and entrepreneurs.”</i> Xtensio started out as just the User Persona module and now currently holds 9 other templates: Startup One-Pager, Lean Canvas, Fundraising Summary, SWOT Analysis, etc. to name a few. These tools have a specific use case — for the person looking to create presentation-ready deliverables without having to do lots of research, sift through templates, or learn illustration software.
-<br><br>    
-
-As part of my application to the Fake Crow agency, I took on the task of designing a new template for Xtensio. While I had some idea as to what could be a good addition to the Xtensio fleet, I first conducted preliminary research before jumping to any conclusions.</p>
-                            <h2>Interviews</h2>
+                            <img class="img-responsive img-centered" src="img/xtensio/persona.png" alt="">
+<p><a href="http://www.xtensio.com/" target="_blank">Xtensio</a> is a web application born out of the product design studio <a href="http://www.fakecrow.com/" target="_blank">Fake Crow</a> in Los Angeles. What was once described as a startup-specific tool -- <i>“Show your investors you have value”</i> -- pivoted to a more broad descriptor — <i>“A toolbox for designers, marketing professionals, and entrepreneurs.”</i> Xtensio started out as just the User Persona module and now currently holds 9 other templates: Startup One-Pager, Lean Canvas, Fundraising Summary, SWOT Analysis, etc. to name a few. These tools have a specific use case — for the person looking to create presentation-ready deliverables without having to do lots of research, sift through templates, or learn illustration software. As part of my application to the Fake Crow agency, I took on the task of designing a new template for Xtensio. </p>
+                            <h2>Research</h2>
                             <div>
-                            <p>For this stage, I spoke to 3 startup CEOs - Jeremy Keeshin // CodeHS, Aaron Fazulak // DESIGNATION , Abhirukt Sapru // Snyffle. I wanted to hone in on a few answers:</p>
-                            <ul>
+                            <p>While I had some idea as to what could be a good addition to the Xtensio fleet, I first conducted preliminary research before jumping to any conclusions.For this stage, I spoke to 3 startup CEOs - Jeremy Keeshin // <a href="http://www.codehs.com" target="_blank">CodeHS</a>, Aaron Fazulak // <a href="http://www.designation.io" target="_blank">DESIGNATION</a> , Abhirukt Sapru // <a href="https://www.linkedin.com/company/snyffle?trk=company_logo" target="_blank">Snyffle</a>. I wanted to hone in on a few answers:</p>
+                            <ul class="left">
                                 <li>What are the use cases that call for producing presentation-ready deliverables?</li>
                                 <li>What aspects of your business do you feel the need to visualize but are unable to?</li>
                             </ul>
+                            <br>
                             <p>
                             What I found is that all 3 CEOs are constantly pitching their business/product and find a never-ending demand to supplement their pitches/email communication with visually appealing documents. After speaking with each of them and debating between a few tools, I decided to design an Experience Mapping Template/Module.    
                             </p>
                             </div>                  
-                            <h2>Experience Maps</h2>
+                            <h3>Experience Maps</h3>
                             <img class="img-responsive img-centered" src="img/xtensio/experiencemaps.png" alt="">
                             <br>
-                            <h3>Research &amp; Synthesis</h3>
+                            <h3>Synthesis</h3>
                             <p>I sought out inspiration from experience maps and user journeys online. As you can see in the image above, there is much variation for this type of document. I began to hone in on what variables are showcased in these documents. From visualizing customers' emotional states to illustrating the business/service blueprint, it was clear that building a tool that allows users to produce these documents would need to be focused. </p>
                             <h3>Experiece Map Generating Software</h3>
                             <div class="row">          
@@ -1238,7 +1236,7 @@ As part of my application to the Fake Crow agency, I took on the task of designi
                             <h2>Design</h2>
                             <h3>Sketches</h3>
                             <img class="img-responsive img-centered" src="img/xtensio/sketch.jpg" alt="">
-                            <p class="caption">As I began to sketch, I tried to work within the design constraints of the current Xtensio platform. I wanted a v1 to require as little new code as possible. </p>
+<!--                             <p class="caption">As I began to sketch, I tried to work within the design constraints of the current Xtensio platform. I wanted a v1 to require as little new code as possible. </p> -->
                             <h3>Screens</h3>
                             <div class="row">          
                                 <div class="col-xs-4"> 
@@ -1254,12 +1252,12 @@ As part of my application to the Fake Crow agency, I took on the task of designi
                                     <img class="img-responsive img-centered" src="img/xtensio/screens/3.jpg" alt="">        
                                 </div>
                             </div>
-                            <p>As you can see above, the "Experience" and "Doing" categories are unique and require brand-new code.</p>
+<!--                             <p>As you can see above, the "Experience" and "Doing" categories are unique and require brand-new code.</p> -->
                             <h3>Prototype</h3>
-                            <iframe src="https://marvelapp.com/b20cgj#9262452?emb=1" width="452" height="452" allowTransparency="true" frameborder="0"></iframe>
+                            <iframe src="https://marvelapp.com/b20cgj#9262452?emb=1" width="452" height="900" allowTransparency="true" frameborder="0"></iframe>
 
-                            <h3>Upon Hire</h3>
-                            <p>Once brought onto the team at Fake Crow, I was asked to work more on Xtensio. Day-to-day tasks took on a wide range. First project: to design a new template using the current system.</p>
+              <!--               <h3>Upon Hire</h3>
+                            <p>Once brought onto the team at Fake Crow, I was asked to work more on Xtensio. Day-to-day tasks took on a wide range. </p> -->
 
                             <br><br>  
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
