--- a/index.html
+++ b/index.html
@@ -373,14 +373,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; dannyluber.com 2015</span>
+                    <span class="copyright">Copyright &copy; dannyluber.com 2016</span>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         <li><a href="https://twitter.com/dannyluber" target="_blank"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li><a href="https://www.linkedin.com/in/dannyluber" target="_blank"><i class="fa fa-linkedin"></i></a>
-                        <li><a href="https://medium.com/@dannyluber" target="_blank"><i class="fa fa-medium" ></i></a>
+                        <li><a href="https://medium.com/@dannyluber" target="_blank"><i class="fa fa-medium"aria-hidden="true"></i></a>
                         </li>
 
 <!--                         <li><a href="https://instagram.com/dannyluber/" target="_blank"><i class="fa fa-instagram"></i></a>
@@ -396,6 +396,7 @@
             </div>
         </div>
     </footer>
+  
 
     <!-- Portfolio Modal 1 - LEASH -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
@@ -990,7 +991,7 @@ Pictured are various related screenshots. Consistent production and engagement o
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
                             <h1>Pursuits</h1>
-                            <p class="item-intro text-muted">Making career transitions stress-free and highly productive</p>
+                           <!--  <p class="item-intro text-muted">Making career transitions stress-free and highly productive</p> -->
                             <img class="img-responsive img-centered" src="img/pursuits/desktop.jpg" alt="">
                             <p>PURSUITS is a startup based in Chicago currently in <a href="https://beta.pursuits.co/" target="_blank">beta version</a>. Its purpose is to provide an organizational hub for those applying to new jobs/pursuing career transitions. The web application follows a similar interaction to that of <a href="https://trello.com/" target="_blank">Trello</a> in which the user clicks and drags customizable cards between categories/columns.<br><br>
 
@@ -1059,7 +1060,7 @@ I created this video using Keynote's animation effects.
                         <div class="modal-body">
                             <!-- PULSEBAND PROJECT DETAILS Go Here -->
                             <h1>Pulseband</h1>
-                            <p class="item-intro text-muted">Developing a heart-focused wearable technology</p>
+                            <!-- <p class="item-intro text-muted" "tagline">Developing a heart-focused wearable technology</p> -->
                             <img class="img-responsive img-centered" src="img/pulseband/mockup.jpg" alt"">
                             <p>
 To simulate a start-to-finish product development cycle, we at DESIGNATION developed a mock product, the Pulseband. The Pulseband is a wearable technology that measures users’ blood pressure, heart rate, steps, sleep patterns among other vitals. The purpose of this project was to define the scope of the the Pulseband’s capabilities and develop a mobile app alongside those functionalities. Over the course of the project, we implemented various product development methodologies such as <a href="https://www.wikiwand.com/en/Scrum_(software_development)" target="_blank">scrum</a> and the <a href="http://www.gv.com/sprint/" target="_blank">Google 5-Day Sprint</a>.<br><br>
@@ -1231,12 +1232,12 @@ I created this video using Keynote's animation effects.
                                     <img class="img-responsive img-centered" src="img/xtensio/generating/3.png" alt="">        
                                 </div>
                             </div>
-                            <p>Once I got an idea for the elements involved in an experience map, I looked to existing tools being used to generate these documents. What I found was that there was a sensitive balance occuring in the creation of these documents. The two forces at work were how much functionality you can put in the editor versus what diversity of templates you want to offer.</p>
+                            <p>Once I got an idea for the elements involved in an experience map, I looked to existing tools being used to generate these documents. What I found was that there was a delicate balance occuring -- the two forces at work were how much functionality the user can put in the editor versus what diversity of templates you want to offer. (The more you design around one, the less you can around the other.)</p>
                             <br>
                             <h2>Design</h2>
                             <h3>Sketches</h3>
-                            <img class="img-responsive img-centered" src="img/xtensio/sketch.jpg" alt="">
-<!--                             <p class="caption">As I began to sketch, I tried to work within the design constraints of the current Xtensio platform. I wanted a v1 to require as little new code as possible. </p> -->
+                            <img class="img-responsive img-centered xtensio" src="img/xtensio/sketch.jpg " alt="">
+                            <p class="caption">As I began to sketch, I tried to work within the design constraints of the current Xtensio platform. I wanted a v1 to require as little new code as possible. </p>
                             <h3>Screens</h3>
                             <div class="row">          
                                 <div class="col-xs-4"> 
