--- a/index.html
+++ b/index.html
@@ -1257,8 +1257,8 @@ I created this video using Keynote's animation effects.
                             <h3>Prototype</h3>
                             <iframe src="https://marvelapp.com/b20cgj#9262452?emb=1" width="452" height="900" allowTransparency="true" frameborder="0"></iframe>
 
-              <!--               <h3>Upon Hire</h3>
-                            <p>Once brought onto the team at Fake Crow, I was asked to work more on Xtensio. Day-to-day tasks took on a wide range. </p> -->
+                            <h3>Upon Hire</h3>
+                            <p>Once brought onto the team at Fake Crow, I was asked to work more on Xtensio. Day-to-day tasks took on a wide range: more templates, working with the development team, QA-ing the product, writing content &amp; copy. </p>
 
                             <br><br>  
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
